k8s/overlays/wsl2-k3s/ingress/ingressroute-backup.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-backup
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`backup.nem.local`)
      kind: Rule
      services:
        - name: nem-backup
          port: 5500
