k8s/overlays/wsl2-k3s/ingress/ingressroute-classification.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-classification
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`classification.nem.local`)
      kind: Rule
      services:
        - name: nem-classification
          port: 5300
