k8s/overlays/wsl2-k3s/ingress/ingressroute-gateway.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-gateway
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gateway.nem.local`)
      kind: Rule
      services:
        - name: nem-gateway
          port: 8090
