k8s/overlays/wsl2-k3s/ingress/ingressroute-homeassistant.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-homeassistant
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homeassistant.nem.local`)
      kind: Rule
      services:
        - name: nem-homeassistant
          port: 5800
