k8s/overlays/wsl2-k3s/ingress/ingressroute-keycloak.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-keycloak
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.nem.local`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
