k8s/overlays/wsl2-k3s/ingress/ingressroute-knowhub.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-knowhub
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`knowhub.nem.local`)
      kind: Rule
      services:
        - name: nem-knowhub
          port: 5001
