k8s/overlays/wsl2-k3s/ingress/ingressroute-mimir.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-mimir
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mimir.nem.local`)
      kind: Rule
      services:
        - name: nem-mimir
          port: 5223
