k8s/overlays/wsl2-k3s/ingress/ingressroute-openbao.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-openbao
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`openbao.nem.local`)
      kind: Rule
      services:
        - name: openbao
          port: 8200
