k8s/overlays/wsl2-k3s/ingress/ingressroute-pgadmin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-pgadmin
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pgadmin.nem.local`)
      kind: Rule
      services:
        - name: pgadmin
          port: 80
