k8s/overlays/wsl2-k3s/ingress/ingressroute-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-prometheus
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.nem.local`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
