k8s/overlays/wsl2-k3s/ingress/ingressroute-rabbitmq.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-rabbitmq
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rabbitmq.nem.local`)
      kind: Rule
      services:
        - name: rabbitmq
          port: 15672
