k8s/overlays/wsl2-k3s/ingress/ingressroute-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-web
  namespace: nem
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`web.nem.local`)
      kind: Rule
      services:
        - name: nem-web
          port: 3000
